--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,16 @@ description = "Experiments with pascal part hierarcical semantic segmentation."
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "torch>=2.5.0",
-    "torchvision>=0.20.0",
+    "ipykernel>=6.29.5",
+    "matplotlib>=3.9.2",
+    "numpy>=1.26.4",
+    "torch>=2.0.0",
+    "torchvision>=0.15.1",
 ]
+
+[tool.hatch.build.targets.wheel]
+packages = ["source"]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
