--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ dependencies = [
     "numpy>=1.26.4",
     "torch>=2.0.0",
     "torchvision>=0.15.1",
-    "transformers"
+    "transformers",
+    "gdown"
 ]
 
 [tool.hatch.build.targets.wheel]
