format(pphss): Run black formatting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "torch>=2.0.0",
     "torchvision>=0.15.1",
     "transformers",
-    "gdown"
+    "gdown",
+    "black"
 ]
 
 [tool.hatch.build.targets.wheel]
